# Dual-optical-target-detection

./: .gitignore  README.md  pyproject.toml  requirements-ultralytics.txt  requirements.txt
configs/: e0_rgb_baseline.yaml  e1_fixed_fusion.yaml  e1_fixed_fusion_nms08.yaml  e1_fixed_fusion_v8m.yaml  e2_qaf.yaml  e3_qaf_p2.yaml  model_e1_fixed.json  model_e2_qaf.json  model_e3_qaf_p2.json
docs/: 双光目标检测项目计划书.md  成员1-双流骨干实现与测试说明.md  成员2-环境清单.md  成员3-P2小目标检测头与指标分析说明.md  成员3-消融分析.md  最终提交结果说明.md  预训练YOLOv8m-RGB实验说明.md
dualdet/: __init__.py  config.py
dualdet/analysis/: __init__.py  metrics.py
dualdet/datasets/: __init__.py  coco.py  rgb_t.py  transforms.py
dualdet/losses/: __init__.py  assigner.py  bbox.py  detection.py
dualdet/models/: __init__.py  backbone.py  build.py  detector.py  fusion.py  head.py  neck.py  qaf.py  rgb_baseline.py
dualdet/utils/: __init__.py  amp.py  checkpoint.py  coco_eval.py  collate.py  config.py  inference.py  postprocess.py  run_metadata.py  seed.py  submission.py  yolo_conversion.py
scripts/: analyze_predictions.py  backfill_training_artifacts.py  check_data.py  convert_coco_to_yolo_rgb.py  ensemble_submissions.py  eval.py  infer.py  infer_ultralytics_rgb.py  plot_training.py  train.py  train_all.py  train_all.sh  train_ultralytics_rgb.py  validate_json.py  visualize_augment.py  visualize_predictions.py
tests/: test_backbone.py  test_config.py  test_dataset.py  test_detector.py  test_qaf.py  test_run_metadata.py  test_submission.py  test_training.py  test_yolo_conversion.py
