[project]
name = "dual-optical-target-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<3",
    "pillow>=10,<12",
    "pycocotools>=2.0.7",
    "pytest>=8.4.2",
    "pyyaml>=6,<7",
    "torch==2.4.1",
    "torchvision==0.19.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dualdet*"]
